// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`language should allow a global object 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "obj",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
  ],
  "err": null,
}
`;

exports[`language should allow many global objects 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "obj1",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "obj2",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
  ],
  "err": null,
}
`;
